[project]
name = "map-poster-streamlit"
version = "0.1.0"
description = "Map poster generator using Streamlit"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Miguel Pimentel" }]
keywords = ["map", "poster", "streamlit"]

dependencies = [
    "streamlit>=1.28.0",
    "osmnx>=2.0.0",
    "matplotlib>=3.10.0",
    "geopandas>=1.1.0",
    "geopy>=2.4.0",
    "pillow>=12.0.0",
    "requests>=2.31.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "networkx>=3.6.0",
    "shapely>=2.1.0",
    "scipy>=1.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # errors
    "W",   # warnings
    "F",   # flakes
    "I",   # isort
    "UP",  # upgrade
    "ARG", # unused-arguments
]

ignore = [
    "E501", # line too long
    "B008", # no function calls in argument defaults
    "W191", # tabs
]

[tool.ruff.lint.per-file-ignores]
"app.py" = ["B008"] # streamlit widget defaults

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
